After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736009 - wrong padding in the panel
wrong padding in the panel
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-04 07:25 UTC by Ondrej Holy
Modified: 2014-09-05 11:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
see what is wrong (32.25 KB, image/png)
2014-09-04 07:25 UTC, Ondrej Holy
  Details
fix wrong history label padding (2.90 KB, patch)
2014-09-04 07:34 UTC, Ondrej Holy
committed Details | Review
replace fingerprint widgets by the UmEditableButton (11.85 KB, patch)
2014-09-04 07:35 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2014-09-04 07:25:01 UTC
Created attachment 285311 [details]
see what is wrong

Styles were changed and some widgets (history and fingerprint values) aren't aligned properly in the panel. See the attachment to know what is wrong.
Comment 1 Ondrej Holy 2014-09-04 07:34:48 UTC
Created attachment 285312 [details] [review]
fix wrong history label padding

Hardcoded value is avoided and the label offset is calculated from style context now.
Comment 2 Ondrej Holy 2014-09-04 07:35:35 UTC
Created attachment 285313 [details] [review]
replace fingerprint widgets by the UmEditableButton

The patch fixes also a wrong padding and replaces GtkNotebook.
Comment 3 Bastien Nocera 2014-09-04 13:03:27 UTC
Review of attachment 285312 [details] [review]:

Looks good.
Comment 4 Bastien Nocera 2014-09-04 13:05:20 UTC
Review of attachment 285313 [details] [review]:

Is that tested? If so, looks good.
Comment 5 Bastien Nocera 2014-09-04 13:06:01 UTC
Both of those would need approval from the release team before committing.
Comment 6 Ondrej Holy 2014-09-04 14:14:51 UTC
(In reply to comment #4)
> Review of attachment 285313 [details] [review]:
> 
> Is that tested? If so, looks good.

It was tested only partially, because don't have fingerprint reader on this laptop, but will try it on my personal laptop for sure...
Comment 7 Ondrej Holy 2014-09-04 14:44:46 UTC
The request for the approval was sent:
https://mail.gnome.org/archives/release-team/2014-September/msg00019.html
Comment 8 Ondrej Holy 2014-09-04 16:05:45 UTC
Tested successfully on my person laptop :-)
Comment 9 Ondrej Holy 2014-09-05 11:14:09 UTC
Comment on attachment 285312 [details] [review]
fix wrong history label padding

commit 6ce59765dc188dec231b9a5e35c5e5bdfe194425
Comment 10 Ondrej Holy 2014-09-05 11:14:24 UTC
Comment on attachment 285313 [details] [review]
replace fingerprint widgets by the UmEditableButton

commit c218a2198e12ac2c52e15f230cf40890568ed89b
Comment 11 Ondrej Holy 2014-09-05 11:15:03 UTC
Thanks for the reviews and approvals!