user-accounts: replace fingerprint widgets by the UmEditableButton

The patch fixes also a wrong padding and replaces GtkNotebook.

https://bugzilla.gnome.org/show_bug.cgi?id=736009